# splitguard

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
examples/: across_splits.py  comparison.py  leaky_pipeline.py  one_import.py  three_way_split.py
src/splitguard/: __init__.py  _core.py  _patch.py  _pytest_plugin.py  _report.py  auto.py
tests/: test_auto.py  test_core.py  test_groups.py  test_identity_warnings.py  test_index_identity.py  test_native.py  test_soundness.py  test_universal.py
tools/: make_analysis_figures.py  make_figures.py  make_logo.py
validation/: compare_methods.py  rigorous_eval.py  run_benchmark.py
